# Capy-Engine

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Project.sln  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  vk.vcxproj  vk.vcxproj.filters
App/: CMakeLists.txt
App/src/: main.cpp
CapyEngine/: CMakeLists.txt
CapyEngine/assets/shadersbin/: vert.spv
CapyEngine/src/: Application.cpp  Application.h  Enums.h  include.h
CapyEngine/src/API/: PerspectiveCamera.cpp  Time.cpp  Time.h  Transform.cpp  Transform.h
CapyEngine/src/Graphics/: Buffers.cpp  Buffers.h  Framebuffer.cpp  Framebuffer.h  Mesh.cpp  Mesh.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Vertex.h
CapyEngine/src/Vulkan/: ResourceManager.cpp  VulkanContext.h  Window.h
Vulkan Project/: CMakeLists.txt
Vulkan Project/src/: Application.cpp  Application.h  Application.hpp  Utils.cpp  Utils.h  Utils.hpp  include.h  include.hpp  main.cpp
Vulkan Project/src/API/: Input.cpp  Input.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Time.cpp
Vulkan Project/src/Events/: Event.h  EventHandler.cpp  EventHandler.h
Vulkan Project/src/Graphics/: Buffers.cpp  Buffers.h  Framebuffer.cpp  Framebuffer.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Vertex.h  VertexBuffer.cpp  VertexBuffer.h
Vulkan Project/src/Vulkan/: Device.cpp  Device.h  Shader.cpp  Shader.h  Swapchain.cpp  Swapchain.h  VulkanContext.cpp  VulkanContext.h  Window.cpp  Window.h
assets/shaders/: test.frag  test.vert
assets/shadersbin/: vert.spv
src/: Application.cpp  Application.h  Utils.h  include.h
src/API/: PerspectiveCamera.cpp  PerspectiveCamera.h
src/Events/: Event.h
src/Graphics/: Buffers.cpp  Framebuffer.h  Mesh.cpp  Mesh.h  Pipeline.cpp  Pipeline.h  Renderer.cpp  Renderer.h  Shader.cpp  Uniforms.h  Vertex.h
src/Vulkan/: ResourceManager.cpp  ResourceManager.h  Swapchain.cpp  Swapchain.h
